--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "nodesh-client",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "Node.JS CLI to communicate with nodesh-server secure shell (Diffie-Hellman key exchange, AES encryption)",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./src/index.js",
+    "lint": "eslint \"src/**/*.js\"",
+    "lint-fix": "eslint \"src/**/*.js\" --fix"
   },
   "dependencies": {
     "colors": "^1.3.3",
-    "form-data": "^2.3.3",
-    "path": "^0.12.7"
+    "socket.io": "^4.0.1"
   },
   "repository": {
     "type": "git",
@@ -31,5 +33,14 @@
   "bugs": {
     "url": "https://github.com/ErAz7/NodeSH-Client/issues"
   },
-  "homepage": "https://github.com/ErAz7/NodeSH-Client#readme"
+  "homepage": "https://github.com/ErAz7/NodeSH-Client#readme",
+  "devDependencies": {
+    "eslint": "^7.25.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-standard": "^4.0.1"
+  }
 }
